[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/21Bot.jpg" type="Texture" id=2]
[ext_resource path="res://Fonts/Button.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/Title.tres" type="DynamicFont" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="Title" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_right = 250.0
margin_bottom = 40.0

[node name="VSplitContainer" type="VSplitContainer" parent="Title"]
margin_right = 500.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
collapsed = true

[node name="Label" type="Label" parent="Title"]
margin_top = 29.0
margin_right = 500.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 4 )
text = "21Bot"
align = 1

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -154.0
margin_top = -201.0
margin_right = 154.0
margin_bottom = 201.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 17
alignment = 1

[node name="NewGame" type="Button" parent="Buttons"]
margin_top = 139.0
margin_right = 308.0
margin_bottom = 169.0
custom_fonts/font = ExtResource( 3 )
text = "New Game"

[node name="Settings" type="Button" parent="Buttons"]
margin_top = 186.0
margin_right = 308.0
margin_bottom = 216.0
custom_fonts/font = ExtResource( 3 )
text = "Settings"

[node name="Quit" type="Button" parent="Buttons"]
margin_top = 233.0
margin_right = 308.0
margin_bottom = 263.0
custom_fonts/font = ExtResource( 3 )
text = "Quit Game"

[connection signal="pressed" from="Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
